@@ -724,6 +724,10 @@ and memory statistics are located. Default: C<System_Performance>.
 If set to C<yes>, only the DOCSIS upstream statistics are enabled, and
 downstream and MAC layer stats are skipped.
 
+=item * C<RFC2670_DOCS_IF::disable-downstreams>
+
+If set to C<yes>, the DOCSIS downstream statistics are disabled.
+
 =item * C<RFC2670_DOCS_IF::suppress-all-cable-stats>
 
 If set to C<yes>, all DOCSIS interfaces are excluded from any cable or
