@@ -1,3 +1,8 @@
+2015-04-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm: new discovery
+	parameter: RFC2670_DOCS_IF::disable-downstreams
+
 2015-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/SNMP_Params.pm: "aes128cfb" is invalid
